# fastapi-course

./: main.py  pyproject.toml
api/: users.py
