[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["Paulo-Machado-Aguiar <paulo.aguiar@pulsus.mobi>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
pydantic = "^1.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
